Fixed ad padding
Fixed an issue where having ads enabled resulted in an off-center header.

--- a/src/css/components/ads.scss
+++ b/src/css/components/ads.scss
@@ -46,6 +46,7 @@
 	.ad-padding .section{
 		padding-left: 200px;
 		padding-right: 200px;
+		box-sizing: border-box;
 	}
 
 	#nitro-unite-header-desktop{
